Version 5.8

- [CHG] Redesigned Spreadsheet Tool (Classic UI)
- [CHG] Redesigned Cross-Platform UI
- [CHG] Redesigned Property Package editors
- [FIX] Fixed text to number conversions
- [FIX] Fixed flowsheet dragging while zoomed
- [FIX] Fixed PFR heat balance
- [FIX] Fixed liquid phase viscosity calculation for supercritical compounds
- [FIX] Fixed Splitter ratios calculation mode
- [FIX] Workaround for math expression parsing errors